ci: use correct delimiter

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -57,7 +57,7 @@ jobs:
 
     - name: Loop Test
       run: |
-        fileList=(${${{steps.find_reports.outputs.files}}//;/ })
+        fileList=(${${{steps.find_reports.outputs.files}}//,/ })
 
     ##############################
     # - name: Check in code coverage
