--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -58,6 +58,7 @@ jobs:
     - name: Loop Test
       run: |
         fileList=(${${{steps.find_reports.outputs.files}}//,/ })
+        for file in $fileList; do echo $file; done
 
     ##############################
     # - name: Check in code coverage
