--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -34,16 +34,18 @@ jobs:
       shell: bash
       run: |
         directories="$(find coverage -type f -name '*coverage*' | sed -r 's|/[^/]+$||' |sort |uniq)"
-        directories="${directories//'%'/','}"
-        directories="${directories//$'\n'/','}"
-        directories="${directories//$'\r'/','}"
-        echo "directories=${directories}" >> $GITHUB_OUTPUT
+        directories="${directories//'%'/', \"'}"
+        directories="${directories//$'\n'/', \"'}"
+        directories="${directories//$'\r'/', \"'}"
+        directories="[\"${directories}\"]"
+        directories="${directories/'[\"\"]'/'[]'}"
+        echo "directories=[${directories}]" >> $GITHUB_OUTPUT
   update-code-coverage-badges:
     needs: unit-tests-review
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        directory: ${{ $(echo needs.unit-tests-review.outputs.directories | tr "," "\n") }}
+        directory: ${{ fromJson(needs.unit-tests-review.outputs.directories) }}
     steps:
     - name: Access variable Test
       run: echo ${{ matrix.directory }}
