--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -29,14 +29,15 @@ jobs:
         affected: true
         nxCloud: true
         targets: test
-    # directories="${directories//'%'/', \"'}"
-    # directories="${directories//$'\n'/', \"'}"
-    # directories="${directories//$'\r'/', \"'}"
+
     - name: Identify Code Coverage Report Locations
       id: find_reports
       shell: bash
       run: |
         directories="$(find coverage -type f -name '*coverage*' | sed -r 's|/[^/]+$||' |sort |uniq)"
+        directories="${directories//'%'/' '}"
+        directories="${directories//$'\n'/' '}"
+        directories="${directories//$'\r'/' '}"
         echo "directories=${directories}" >> $GITHUB_OUTPUT
   update-code-coverage-badges:
     needs: unit-tests-review
