--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -42,7 +42,7 @@ jobs:
         directories="[${directories}]"
         echo "directories=${directories}" >> $GITHUB_OUTPUT
   code-coverage-badge:
-    needs: unit-tests-review
+    needs: unit-tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
