ci(git cz): repeat steps

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -12,18 +12,22 @@ jobs:
       directories: ${{ steps.find_reports.outputs.directories }}
     steps:
     - name: Checkout
+      continue-on-error: false
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
     - name: Use Node v16
+      continue-on-error: false
       uses: actions/setup-node@v3
       with:
         node-version: 16
     - name: Install dependencies
+      continue-on-error: false
       uses: bahmutov/npm-install@v1
       with:
         install-command: npm i
     - name: Run Unit Tests and Coverage Reports
+      continue-on-error: false
       uses: MansaGroup/nrwl-nx-action@v3.2.1
       with:
         affected: true
@@ -31,6 +35,7 @@ jobs:
         targets: test
 
     - name: Identify Code Coverage Report Locations
+      continue-on-error: false
       id: find_reports
       shell: bash
       run: |
@@ -48,6 +53,28 @@ jobs:
       matrix:
         directory: ${{fromJson(needs.unit-tests.outputs.directories)}}
     steps:
+    - name: Checkout
+      continue-on-error: false
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: Use Node v16
+      continue-on-error: false
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16
+    - name: Install dependencies
+      continue-on-error: false
+      uses: bahmutov/npm-install@v1
+      with:
+        install-command: npm i
+    - name: Run Unit Tests and Coverage Reports
+      continue-on-error: false
+      uses: MansaGroup/nrwl-nx-action@v3.2.1
+      with:
+        affected: true
+        nxCloud: true
+        targets: test
     - name: Access variable Test
       run: echo ${{ matrix.directory }}
     - name: Create Badge
