--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -45,6 +45,7 @@ jobs:
         directories="${directories//$'\r'/','}"
         directories=`echo ${directories} | sed 's/,/"&"/g' | sed 's/\S\+/"&"/g'`
         directories="[${directories}]"
+        echo "directories=${directories}"
         echo "directories=${directories}" >> $GITHUB_OUTPUT
   code-coverage-badge:
     needs: unit-tests
