--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -86,14 +86,22 @@ jobs:
         content=`grep "\"total\": " ${filePath}`
         content=${content:10}
         content=${content::-1}
-        content={fromJson(${content})
+        values=(`echo $content | grep -o '"pct":[0-9]*' | grep -o '[^":]*$'`)
+        count=${#values[@]}
+        valuesString="${values[@]}"
+        sumString=${valuesString// /+}
+        sum=$((sumString))
+        average=`expr $sum / $count`
+        percentage="$average%"
         echo "directory=${directory}"
         echo "project=${project}"
         echo "filePath=${filePath}"
         echo "content=${content}"
+        echo "code coverage:${percentage}"
         echo "directory=${directory}" >> $GITHUB_OUTPUT
         echo "project=${project}" >> $GITHUB_OUTPUT
         echo "filePath=${filePath}" >> $GITHUB_OUTPUT
+        echo "coverage=${percentage}" >> $GITHUB_OUTPUT
     - name: Create the Badge
       uses: schneegans/dynamic-badges-action@v1.0.0
       with:
@@ -101,8 +109,7 @@ jobs:
         gistID: 0b98501627ca03cf8058155b5c337a3d
         filename: ${{steps.params.outputs.project}}.json
         label: Code Coverage
-        message: 100%
-        # message: ${{ env.COVERAGE }}
+        message: ${{steps.params.outputs.coverage}}
         style: flat
         valColorRange: 100
         maxColorRange: 100
