--- a/packages/data-ferret/package.json
+++ b/packages/data-ferret/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@enio.ai/data-ferret",
   "version": "1.0.0",
+  "description": "data-ferret is a set of search and transformation utils for unarranged, deeply nested data",
   "license": "MIT",
   "author": "Enio Authors",
   "type": "module",
