--- a/packages/typedoc/package.json
+++ b/packages/typedoc/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@enio.ai/typedoc",
   "version": "1.0.3",
+  "description": "Generator to setup Nx projects with documentation automation using typedoc",
   "license": "MIT",
   "author": "Enio Authors",
   "repository": {
