build(repository-badge-service): add badge-maker dependency :heavy_plus_sign:

--- a/packages/repository-badge-service/package.json
+++ b/packages/repository-badge-service/package.json
@@ -2,5 +2,8 @@
   "name": "@enio.ai/repository-badge-service",
   "description": "A service to generate repository badges",
   "version": "0.0.1",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "badge-maker": "^3.3.1"
+  }
 }
