chore(repository-badge-service): configure release process :wrench:

--- a/packages/repository-badge-service/project.json
+++ b/packages/repository-badge-service/project.json
@@ -31,5 +31,11 @@
       }
     }
   },
+  "version": {
+    "executor": "@jscutlery/semver:version",
+    "options": {
+      "preset": "conventional"
+    }
+  },
   "tags": []
 }
