build: setup all projects with nx-install

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "create.app.nest": "nx g @nrwl/nest:app",
     "create.app.next": "nx g @nrwl/next:app",
     "create.lib.ts": "nx g @nrwl/js:lib",
-    "create.lib.react-native": "npx nx g @nrwl/react-native:lib",
+    "create.lib.react-native": "nx g @nrwl/react-native:lib",
     "create.lib.react": "nx g @nrwl/react:lib",
     "create.lib.nest": "nx g @nrwl/nest:lib",
     "create.lib.next": "nx g @nrwl/next:lib",
@@ -31,6 +31,7 @@
     "test:affected": "nx affected:test",
     "e2e": "nx e2e",
     "e2e:affected": "nx affected:e2e",
+    "nx-install": "nx affected --target=nx-install --all",
     "build": "nx build",
     "release": "nx version",
     "publish": "nx publish --verbose",
