fix: correct nx-install project configuration

--- a/packages/nx-install/project.json
+++ b/packages/nx-install/project.json
@@ -71,7 +71,7 @@
             "forwardAllArgs": true
           }
         ],
-        "cwd": "packages/data-ferret",
+        "cwd": "packages/nx-install",
         "parallel": false
       }
     }
