build: add script for specific projects

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "test:affected": "nx affected:test",
     "e2e": "nx e2e",
     "e2e:affected": "nx affected:e2e",
-    "nx-install": "nx affected --target=nx-install --all",
+    "nx-install": "nx nx-install",
+    "nx-install:affected": "nx affected --target=nx-install --all",
     "build": "nx build",
     "release": "nx version",
     "publish": "nx publish --verbose",
