--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@enio.ai/@badge-service": ["apps/@badge-service/src/index.ts"],
       "@enio.ai/data-ferret": ["packages/data-ferret/src/index.ts"],
       "@enio.ai/nx-install": ["packages/nx-install/src/index.ts"],
-      "@enio.ai/repository-badge-service": ["packages/repository-badge-service/src/index.ts"],
       "@enio.ai/typedoc": ["packages/typedoc/src/index.ts"]
     }
   },
