--- a/apps/@badge-service/tsconfig.json
+++ b/apps/@badge-service/tsconfig.json
@@ -7,7 +7,8 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true
   },
   "files": [],
   "include": [],
