--- a/packages/data-ferret/project.json
+++ b/packages/data-ferret/project.json
@@ -39,6 +39,7 @@
     },
     "typedoc": {
       "executor": "@enio.ai/typedoc:typedoc",
+      "outputs": ["docs/packages/data-ferret"],
       "options": {
         "options": "typedoc.json"
       },
