build(data-ferret): specify main in package.json :wrench:

--- a/packages/data-ferret/package.json
+++ b/packages/data-ferret/package.json
@@ -9,6 +9,7 @@
     "type": "git",
     "url": "https://github.com/enio-ireland/enio/tree/develop/packages/data-ferret"
   },
+  "main": "src/index.js",
   "private": false,
   "contributors": [
     {
